Base Layout. Need to fix the prizes position

--- a/www/index.html
+++ b/www/index.html
@@ -31,12 +31,19 @@
     <body>
         <div class="app">
 
-            <header>Evento</header>
+            <header>
+                <img src="img/logo.png" class="logo" />
+            </header>
             <div id="slot_machine">
+                <ul id="pontuacao">
+                    <li id="ultimo">90</li>
+                    <li id="pontos">000000</li>
+                    <li id="giros">150</li>
+                </ul>
                 <div id="slots"></div>
                 <div id="control">
                     <a href="#push" id="push"></a>
-                    <span class="bar"></span>
+                   
                 </div>
             </div>
             
